<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="character"
            type="com.adidev.breakingbad.data.Character" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.CharacterDetailFragment"
            android:paddingBottom="20dp">


            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="?attr/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/myToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/character"
                app:titleTextColor="?attr/colorOnPrimary"
                app:collapseIcon="@drawable/baseline_arrow_back_white_24dp" />

            <View
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="0dp"

                android:background="@drawable/profile_background"
                app:layout_constraintCircleRadius="20dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintBottom_toBottomOf="@id/characterSeasonAppearance"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <ImageView
                android:id="@+id/characterImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="@+id/cardView"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="20sp"
                app:layout_goneMarginTop="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/characterImage"
                app:layout_constraintTop_toTopOf="@+id/guideline4"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_weight="0.2" />

            <TextView
                android:id="@+id/characterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@{character.name}"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintLeft_toLeftOf="@id/textView"
                tools:layout_editor_absoluteX="250dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="?attr/colorOnPrimary"
                android:text="Occupation"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/characterImage" />

            <TextView
                android:id="@+id/characterOccupation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@{character.occupationString}"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="@id/guideline3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="?attr/colorOnPrimary"
                android:text="Status"
                app:layout_constraintTop_toBottomOf="@+id/characterOccupation"
                app:layout_constraintStart_toStartOf="@+id/guideline2" />

            <TextView
                android:id="@+id/characterStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="?attr/colorOnPrimary"
                android:text="@{character.status}"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/guideline2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="?attr/colorOnPrimary"
                android:text="Nickname"
                app:layout_constraintTop_toBottomOf="@+id/characterStatus"
                app:layout_constraintStart_toStartOf="@+id/guideline2" />

            <TextView
                android:id="@+id/characterNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="?attr/colorOnPrimary"
                android:text="@{character.nickname}"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/guideline2" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:textColor="?attr/colorOnPrimary"
                android:text="Season Appearance"
                app:layout_constraintTop_toBottomOf="@+id/characterNickname"
                app:layout_constraintStart_toStartOf="@+id/guideline2" />

            <TextView
                android:id="@+id/characterSeasonAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@{character.appearanceString}"
                android:textColor="?attr/colorOnPrimary"
                android:paddingBottom="20dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="85dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>