<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--item for our search view with its id-->
    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/baseline_search_white_24dp"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/filter"
        android:icon="@drawable/baseline_filter_alt_white_24dp"
        android:title="Filter"
        app:showAsAction="ifRoom|collapseActionView" />

</menu>